<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_challenges"
        android:title="@string/title_challenges"
        android:icon="@drawable/challenges_nav"/>
    <item
        android:id="@+id/bottom_calendar"
        android:title="@string/title_calendar"
        android:icon="@drawable/outline_calendar_today_24"/>
    <item
        android:id="@+id/bottom_home"
        android:title="@string/title_home"
        android:icon="@drawable/home_temporary"/>
    <item
        android:id="@+id/bottom_completed"
        android:title="@string/Completed"
        android:icon="@drawable/plus_sign_add_tasks"/>
    <item
        android:id="@+id/bottom_settings"
        android:title="@string/title_settings"
        android:icon="@drawable/bottom_nav_settings"/>

</menu>